--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.0
-scikit-learn==1.3.2
-numpy==1.24.3
-pandas==2.0.3
-joblib==1.3.2
-gunicorn==21.2.0
+flask
+gunicorn
+scikit-learn
+joblib
+numpy<2.0
+pandas
